Fix unvisible dropdown menu

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -94,12 +94,12 @@ div.errors {background-color: #ffcccc;border: 2px solid red;}
 .menuItem {display: block;color: white;text-align: center;padding: 14px 16px;text-decoration: none;}
 .activeMenuItem {display: block;color: white;background-color: #4CAF50;text-align: center;padding: 14px 16px;text-decoration: none;}
 .menu li a:hover:not(.activeMenuItem ) {background-color: #101010;}
-.fixed {position: fixed;top: 0;}
+.fixed {position: fixed;top: 0;overflow: visible;}
 #currentUser {float: right;}
-#dropdown-content {display: none;position: absolute;background-color: #737373;min-width: 160px;box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);}
+#dropdown-content {display: none;position:absolute;background-color: #737373;min-width: 160px;box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); z-index: 10001;}
 #dropdown-content a {color: white;padding: 12px 16px;text-decoration: none;display: block;}
 #dropdown-content a:hover {background-color: #101010;}
-.dropdown:hover #dropdown-content {display: block; z-index: 10000;}
+.dropdown:hover #dropdown-content {display: block;}
 
 /* Диаграммы */
 .chartContainer {width: 99%;border: 0px solid gray;padding-top: 10px;}
